<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity" >
    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminder" />
    <Spinner
        android:id="@+id/months"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/days"
        android:entries="@array/months"
        android:prompt="@string/month_prompt" />
    <Spinner
        android:id="@id/days"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_alignParentLeft="true"
        android:entries="@array/days"
        android:prompt="@string/day_prompt" />
    <Spinner
        android:id="@+id/years"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/months"
        android:layout_alignParentLeft="true"
        android:entries="@array/years"
        android:prompt="@string/year_prompt" />
    <Button
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/days"
        android:layout_alignParentRight="true"
        android:text="@string/done" />

</RelativeLayout>
